Converts project to use GNU autotools.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,24 @@
 *.exe
 *.dll
 *.so
+*.lo
+.deps
+.libs
+autom4te.cache
+aclocal.m4
+ar-lib
+config.*
+configure
+depcomp
+install-sh
+*.la
+libtool
+ltmain.sh
+Makefile.in
+missing
+libtool.m4
+ltoptions.m4
+ltsugar.m4
+ltversion.m4
+lt~obsolete.m4
+.dirstamp
