Cleanup of build environment.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,8 +3,6 @@ ACLOCAL_AMFLAGS    = -I m4
 
 pkginclude_HEADERS = src/glm.h src/mat2.h src/mat3.h src/mat4.h \
                      src/projection.h src/vec2.h src/vec3.h src/vec4.h
-                     
-noinst_HEADERS     = test/rtest.h
 
 lib_LTLIBRARIES    = libglm.la
 
@@ -16,8 +14,7 @@ check_PROGRAMS     = glm-test
 TESTS              = glm-test
 
 glm_test_CXXFLAGS  = -Isrc
-glm_test_LDADD     = libglm.la
-glm_test_SOURCES   = test/main.cpp test/mat4_test.cpp test/proj_test.cpp \
-                     test/rtest.cpp
+glm_test_LDADD     = libglm.la @TEST_LIBS@
+glm_test_SOURCES   = test/main.cpp test/mat4_test.cpp test/proj_test.cpp 
 
 EXTRA_DIST         = README.md
