--- a/wercker.yml
+++ b/wercker.yml
@@ -1,6 +1,14 @@
 box: rioki/gcc-cpp
 build:
   steps:
+    - install-packages:
+        packages: git
+    - script:
+        name: get rtest
+        code: git clone https://github.com/rioki/rtest.git
+    - script: 
+        name: build rtest
+        code: cd rtest && make && sudo make install
     - script:
         name: autogen
         code: sh autogen.sh
