Implements vector and matrix with templates.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,20 +1,19 @@
 
-ACLOCAL_AMFLAGS    = -I m4
-
-pkginclude_HEADERS = src/glm.h src/mat2.h src/mat3.h src/mat4.h \
-                     src/projection.h src/vec2.h src/vec3.h src/vec4.h
-
-lib_LTLIBRARIES    = libglm.la
-
-libglm_la_LDFLAGS  = -no-undefined -version-info 0:0:0
-libglm_la_SOURCES  = src/mat2.cpp src/mat3.cpp src/mat4.cpp src/projection.cpp \
-                     src/vec2.cpp src/vec3.cpp src/vec4.cpp
+pkginclude_HEADERS = src/glm.h \
+                     src/vector.h \
+                     src/matrix.h
 
 check_PROGRAMS     = glm-test
 TESTS              = glm-test
 
 glm_test_CXXFLAGS  = -Isrc
-glm_test_LDADD     = libglm.la @TEST_LIBS@
-glm_test_SOURCES   = test/main.cpp test/mat4_test.cpp test/proj_test.cpp 
+glm_test_LDADD     = @TEST_LIBS@
+glm_test_SOURCES   = test/main.cpp \
+                     test/vec2_test.cpp \
+                     test/vec3_test.cpp \
+                     test/vec4_test.cpp \
+                     test/mat2_test.cpp \
+                     test/mat3_test.cpp \
+                     test/mat4_test.cpp
 
 EXTRA_DIST         = README.md
